tests/baselines/reference/assignmentToFunction.errors.txt
tests/cases/compiler/assignmentToFunction.ts(2,1): error TS2364: Invalid left-hand side of assignment expression.
tests/cases/compiler/assignmentToFunction.ts(8,9): error TS2364: Invalid left-hand side of assignment expression.


==== tests/cases/compiler/assignmentToFunction.ts (2 errors) ====
    function fn() { }
    fn = () => 3;
    ~~
!!! error TS2364: Invalid left-hand side of assignment expression.
    
    module foo {
        function xyz() {
            function bar() {
            }
            bar = null;
            ~~~
!!! error TS2364: Invalid left-hand side of assignment expression.
        }
    }